Bug#1594: PRM Admin: Icons and Text are overlapping for Add New, By Group, Logged In and Super Groups.
Former-commit-id: 4b7badd132adbeda7ba131f36a593245c1b55719

--- a/WebApps/MillFrame/MillimanSQLBrowser/Content/Style/bootstrap.css
+++ b/WebApps/MillFrame/MillimanSQLBrowser/Content/Style/bootstrap.css
@@ -263,8 +263,12 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('../Images/glyphicons-halflings-regular.eot');
+  src: url('../Images/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
+      url('../Images/glyphicons-halflings-regular.woff2') format('woff2'), 
+      url('../Images/glyphicons-halflings-regular.woff') format('woff'), 
+      url('../Images/glyphicons-halflings-regular.ttf') format('truetype'), 
+      url('../Images/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -274,7 +278,6 @@ th {
   font-style: normal;
   font-weight: normal;
   line-height: 1;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
